Refactoring support Quarkus 1.6.x